--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-558.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-5.31MB/s(Youtube:不良林), server: 120.241.236.216, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-266.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-19.72MB/s(Youtube:不良林), server: 120.241.236.215, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.61MB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-5.31MB/s(Youtube:不良林), server: 120.241.236.216, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-16.30MB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.54MB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.07MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-390.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-463.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-506.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-491.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-463.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
