--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-19.72MB/s(Youtube:不良林), server: 120.241.236.215, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-469.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-426.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇮🇳 印度-316.2KB/s(Youtube:不良林), server: in-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-6.74MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
