--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-469.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-426.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇮🇳 印度-316.2KB/s(Youtube:不良林), server: in-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-6.74MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.35MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
+  - {name: 🇨🇳 中国-433.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-510.6KB/s(Youtube:不良林), server: 120.241.236.218, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.91MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-316.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
