--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-491.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇯🇵 日本-3.87MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2, server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-469.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-714.8KB/s(Youtube:不良林), server: 116.129.254.192, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
+  - {name: 🇨🇳 中国-402.4KB/s(Youtube:不良林), server: 120.241.236.113, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林) 2
       - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
